Mejora en carga de data

--- a/E1 - Carga de Datos.ipynb
+++ b/E1 - Carga de Datos.ipynb
@@ -13,39 +13,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mainpath = \"/Volumes/Data/soldash/developer/personal/python/Datos/\""
+    "mainpath = \"/Volumes/Data/soldash/developer/personal/python/Datos/\"\n",
+    "filename = \"lslr PARTE 1 DE 6 CRISIS.m00\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(mainpath+\"LSLR PARTE 2 DE 3 CRISIS.m00\", sep=\"\\s+\", skiprows=[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['TimePoints=15794000', 'Channels=20', 'BeginSweep[ms]=0.00', 'SamplingInterval[ms]=2.000', 'Bins/uV=1.000', 'Time=19:57:08']\n",
-      "1900-01-01 19:57:08\n",
-      "1900-01-01 19:57:08.002000\n"
+      "CPU times: user 46.3 s, sys: 13.7 s, total: 1min\n",
+      "Wall time: 1min 11s\n"
      ]
     }
    ],
    "source": [
-    "datatitle = open(mainpath + \"LSLR PARTE 2 DE 3 CRISIS.m00\",\"r\")\n",
+    "%%time\n",
+    "data = pd.read_csv(mainpath+ filename sep=\"\\s+\", skiprows=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 36.7 s, sys: 2.15 s, total: 38.9 s\n",
+      "Wall time: 51.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "data = pd.read_csv(mainpath+filename, sep=\"\\s+\", skiprows=[0], usecols = ['X1-X2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['TimePoints=23085500', 'Channels=20', 'BeginSweep[ms]=0.00', 'SamplingInterval[ms]=2.000', 'Bins/uV=1.000', 'Time=07:06:59']\n",
+      "1900-01-01 07:06:59\n",
+      "1900-01-01 07:06:59.002000\n"
+     ]
+    }
+   ],
+   "source": [
+    "datatitle = open(mainpath + filename,\"r\")\n",
     "info = datatitle.readline().strip().split(\" \")\n",
     "print(info)\n",
     "info = info[len(info)-1].split(\"=\")\n",
@@ -57,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -81,331 +111,77 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Fp1-F7</th>\n",
-       "      <th>F7-T3</th>\n",
-       "      <th>T3-T5</th>\n",
-       "      <th>T5-O1</th>\n",
-       "      <th>Fp1-F3</th>\n",
-       "      <th>F3-C3</th>\n",
-       "      <th>C3-P3</th>\n",
-       "      <th>P3-O1</th>\n",
-       "      <th>Fz-Cz</th>\n",
-       "      <th>Cz-Pz</th>\n",
-       "      <th>Fp2-F4</th>\n",
-       "      <th>F4-C4</th>\n",
-       "      <th>C4-P4</th>\n",
-       "      <th>P4-O2</th>\n",
-       "      <th>Fp2-F8</th>\n",
-       "      <th>F8-T4</th>\n",
-       "      <th>T4-T6</th>\n",
-       "      <th>T6-O2</th>\n",
        "      <th>X1-X2</th>\n",
-       "      <th>Trigger</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15793995</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>-7.20</td>\n",
-       "      <td>0</td>\n",
+       "      <td>23085495</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15793996</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>-7.19</td>\n",
-       "      <td>0</td>\n",
+       "      <td>23085496</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15793997</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>-7.18</td>\n",
-       "      <td>0</td>\n",
+       "      <td>23085497</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15793998</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>-7.16</td>\n",
-       "      <td>0</td>\n",
+       "      <td>23085498</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15793999</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>-7.15</td>\n",
-       "      <td>0</td>\n",
+       "      <td>23085499</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15794000 rows × 20 columns</p>\n",
+       "<p>23085500 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Fp1-F7  F7-T3  T3-T5  T5-O1  Fp1-F3  F3-C3  C3-P3  P3-O1  Fz-Cz  \\\n",
-       "0          -0.00  -0.00  -0.00  -0.00   -0.00  -0.00  -0.00  -0.00  -0.00   \n",
-       "1          -0.00  -0.00  -0.00  -0.00   -0.00  -0.00  -0.00  -0.00  -0.00   \n",
-       "2          -0.00  -0.00  -0.00  -0.00   -0.00  -0.00  -0.00  -0.00  -0.00   \n",
-       "3          -0.00  -0.00  -0.00  -0.00   -0.00  -0.00  -0.00  -0.00  -0.00   \n",
-       "4          -0.00  -0.00  -0.00  -0.00   -0.00  -0.00  -0.00  -0.00  -0.00   \n",
-       "...          ...    ...    ...    ...     ...    ...    ...    ...    ...   \n",
-       "15793995   -7.20  -7.20  -7.20  -7.20   -7.20  -7.20  -7.20  -7.20  -7.20   \n",
-       "15793996   -7.19  -7.19  -7.19  -7.19   -7.19  -7.19  -7.19  -7.19  -7.19   \n",
-       "15793997   -7.18  -7.18  -7.18  -7.18   -7.18  -7.18  -7.18  -7.18  -7.18   \n",
-       "15793998   -7.16  -7.16  -7.16  -7.16   -7.16  -7.16  -7.16  -7.16  -7.16   \n",
-       "15793999   -7.15  -7.15  -7.15  -7.15   -7.15  -7.15  -7.15  -7.15  -7.15   \n",
+       "          X1-X2\n",
+       "0          -0.0\n",
+       "1          -0.0\n",
+       "2          -0.0\n",
+       "3          -0.0\n",
+       "4          -0.0\n",
+       "...         ...\n",
+       "23085495   -0.0\n",
+       "23085496   -0.0\n",
+       "23085497   -0.0\n",
+       "23085498   -0.0\n",
+       "23085499   -0.0\n",
        "\n",
-       "          Cz-Pz  Fp2-F4  F4-C4  C4-P4  P4-O2  Fp2-F8  F8-T4  T4-T6  T6-O2  \\\n",
-       "0         -0.00   -0.00  -0.00  -0.00  -0.00   -0.00  -0.00  -0.00  -0.00   \n",
-       "1         -0.00   -0.00  -0.00  -0.00  -0.00   -0.00  -0.00  -0.00  -0.00   \n",
-       "2         -0.00   -0.00  -0.00  -0.00  -0.00   -0.00  -0.00  -0.00  -0.00   \n",
-       "3         -0.00   -0.00  -0.00  -0.00  -0.00   -0.00  -0.00  -0.00  -0.00   \n",
-       "4         -0.00   -0.00  -0.00  -0.00  -0.00   -0.00  -0.00  -0.00  -0.00   \n",
-       "...         ...     ...    ...    ...    ...     ...    ...    ...    ...   \n",
-       "15793995  -7.20   -7.20  -7.20  -7.20  -7.20   -7.20  -7.20  -7.20  -7.20   \n",
-       "15793996  -7.19   -7.19  -7.19  -7.19  -7.19   -7.19  -7.19  -7.19  -7.19   \n",
-       "15793997  -7.18   -7.18  -7.18  -7.18  -7.18   -7.18  -7.18  -7.18  -7.18   \n",
-       "15793998  -7.16   -7.16  -7.16  -7.16  -7.16   -7.16  -7.16  -7.16  -7.16   \n",
-       "15793999  -7.15   -7.15  -7.15  -7.15  -7.15   -7.15  -7.15  -7.15  -7.15   \n",
-       "\n",
-       "          X1-X2  Trigger  \n",
-       "0         -0.00        0  \n",
-       "1         -0.00        0  \n",
-       "2         -0.00        0  \n",
-       "3         -0.00        0  \n",
-       "4         -0.00        0  \n",
-       "...         ...      ...  \n",
-       "15793995  -7.20        0  \n",
-       "15793996  -7.19        0  \n",
-       "15793997  -7.18        0  \n",
-       "15793998  -7.16        0  \n",
-       "15793999  -7.15        0  \n",
-       "\n",
-       "[15794000 rows x 20 columns]"
+       "[23085500 rows x 1 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,6 +208,59 @@
    ],
    "source": [
     "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Indagar si existen valores nulos\n",
+    "pd.isnull(data['X1-X2']).values.ravel().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          -0.00\n",
+       "1          -0.00\n",
+       "2          -0.00\n",
+       "3          -0.00\n",
+       "4          -0.00\n",
+       "            ... \n",
+       "15793995   -7.20\n",
+       "15793996   -7.19\n",
+       "15793997   -7.18\n",
+       "15793998   -7.16\n",
+       "15793999   -7.15\n",
+       "Name: X1-X2, Length: 15794000, dtype: float64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data['X1-X2']\n",
+    "data"
    ]
   },
   {
